# listen-cloud

./: .gitignore  Makefile  README.md  app.py  config.yaml  pyproject.toml
src/tts_tester/: __init__.py  __main__.py  cache.py  cli.py  config.py  player.py  tts.py
